cheatsheet/step1/backend_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: backend-network-policy
  namespace: backend-ns
spec:
  endpointSelector:
    matchLabels:
      app: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
        "k8s:io.kubernetes.pod.namespace": frontend-ns
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/allow"
        - method: "GET"
          path: "/health"
